--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -21,6 +21,7 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.2.0",
+    "serve": "^6.5.6",
     "webpack": "^4.6.0",
     "webpack-dev-server": "^3.1.3"
   },
@@ -30,5 +31,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://54.254.143.189:3000"
 }
