--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -8,8 +8,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.0",
+    "express-request-proxy": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
+    "pm2": "^2.10.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.2",
@@ -21,8 +23,7 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.2.0",
-    "webpack": "^4.6.0",
-    "webpack-dev-server": "^3.1.3"
+    "webpack": "3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +31,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://52.221.191.134:3000"
 }
